Minor Updates - Adjust Onspot Click Pop up Message

--- a/geomap_indo/webapp/view/Geomap.view.xml
+++ b/geomap_indo/webapp/view/Geomap.view.xml
@@ -124,7 +124,7 @@
                                                 </svg>
                                                 <Link id="_IDGenLink"
                                                 text="©️ Source Code"
-                                                
+                                                target="_blank"
                                                 href="https://github.com/alenkarendra/CDS_LEARN/tree/main/geomap_indo"/>
                                         </VBox>
 
