Minor Updates - Adjust Button

--- a/geomap_indo/webapp/view/App.view.xml
+++ b/geomap_indo/webapp/view/App.view.xml
@@ -1,7 +1,6 @@
-<mvc:View controllerName="geomapindo.controller.App"
-    xmlns:html="http://www.w3.org/1999/xhtml"
-    xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
-    <App id="app">
-    </App>
+<mvc:View controllerName="geomapindo.controller.App" 
+	xmlns:html="http://www.w3.org/1999/xhtml" 
+	xmlns:mvc="sap.ui.core.mvc" displayBlock="true" 
+	xmlns="sap.m">
+	<App id="app"></App>
 </mvc:View>
