--- a/geomap_indo/webapp/view/NewView.view.xml
+++ b/geomap_indo/webapp/view/NewView.view.xml
@@ -3,18 +3,23 @@
 	xmlns="sap.m"
 	xmlns:l="sap.ui.layout"
 	xmlns:viz="sap.viz.ui5.controls"
-	xmlns:viz.data="sap.viz.ui5.data"
-	xmlns:viz.feeds="sap.viz.ui5.controls.common.feeds">
+	xmlns:viz.data="sap.viz.ui5.data" height="100%"
+	xmlns:viz.feeds="sap.viz.ui5.controls.common.feeds" displayBlock="true">
 
-	<Page id="_IDGenPage1" titleAlignment="Center" title="New View" showNavButton="true" navButtonPress="onBackPress" navButtonTooltip="Back">
+	<Page id="_IDGenPage1" titleAlignment="Center" title="Analytics Map" showNavButton="true" navButtonPress="onBackPress" navButtonTooltip="Back">
 		<!-- <l:FixFlex id="_IDGenFixFlex" class="fixFlexVertical"> 
 
 	</l:FixFlex> -->
 		<content>
-			<Text id="_IDGenText2" text="Welcome to the new view!" />
-			
-			<Text id="_IDGenText3" text="{salesIndo>salesData/0/sales}" />
+			<!-- <Text id="_IDGenText2" text="Ini Halaman New View" /> -->
 
+
+			<!-- Daftar List yang akan otomatis looping data -->
+			<!-- <List items="{salesIndo>/salesData}">
+                <items>
+                    <StandardListItem title="{salesIndo>city}" description="Total Sales: {salesIndo>sales}" />
+                </items>
+            </List> -->
 
 			<!-- Start of SALES PER COUNTRY -->
 			<l:BlockLayout id="_IDGenBlockLayout2" background="Dashboard" visible="true">
@@ -23,28 +28,64 @@
 						<l:content>
 							<l:BlockLayoutCell id="idCell4" width="1">
 								<l:content>
-									<viz:VizFrame id="_IDGenVizFrame" uiConfig="{applicationSet:'fiori'}" vizType="Pie"  vizProperties="{title: {text: 'Sales Per City'}}">
-										
+
+									<viz:VizFrame id="IDGenVizFrame" vizType="pie" uiConfig="{applicationSet:'fiori'}" width="100%" height="400px" vizProperties="{title: {text: 'Top 10 Sales Per Provinsi'}}">
+
+										<!-- Dataset akan diatur dari controller -->
 										<viz:dataset>
-											<!-- <viz.data:FlattenedDataset id="_IDGenFlattenedDataset1" data="{salesIndo>/salesData}"> -->
-											<viz.data:FlattenedDataset id="_IDGenFlattenedDataset1" data="{/ZRENDRA_IDN}">
+											<!-- <viz.data:FlattenedDataset data="{salesIndo>/top10sales}"> -->
+											<viz.data:FlattenedDataset data="{salesIndo>/salesData}">
 												<viz.data:dimensions>
-													<!-- <viz.data:DimensionDefinition id="_IDGenDimensionDefinition" name="City" value="{salesData>city}"> -->
-													<viz.data:DimensionDefinition id="_IDGenDimensionDefinition" name="City" value="{city}">
-													</viz.data:DimensionDefinition>
+													<viz.data:DimensionDefinition name="City" value="{salesIndo>city}" />
 												</viz.data:dimensions>
 												<viz.data:measures>
-													<viz.data:MeasureDefinition id="_IDGenMeasureDefinition" name="Sales" value="{sales}">
-													</viz.data:MeasureDefinition>
+													<viz.data:MeasureDefinition name="Sales" value="{salesIndo>sales}" />
 												</viz.data:measures>
 											</viz.data:FlattenedDataset>
 										</viz:dataset>
-									
-										<viz:feeds>
-                                            <viz.feeds:FeedItem id="_IDGenFeedItem1" uid="size" type="Measure" values="Sales"></viz.feeds:FeedItem>
-                                            <viz.feeds:FeedItem id="_IDGenFeedItem2" uid="color" type="Dimension" values="City"></viz.feeds:FeedItem>
-                                        </viz:feeds>
 
+										<!-- Feeds untuk VizFrame -->
+										<viz:feeds>
+											<viz.feeds:FeedItem uid="size" type="Measure" values="Sales" />
+											<viz.feeds:FeedItem uid="color" type="Dimension" values="City" />
+										</viz:feeds>
+									</viz:VizFrame>
+
+								</l:content>
+
+							</l:BlockLayoutCell>
+						</l:content>
+					</l:BlockLayoutRow>
+				</l:content>
+			</l:BlockLayout>
+			<!-- End of SALES PER COUNTRY -->
+
+			<!-- Start Of Chart 1 -->
+			<l:BlockLayout id="_IDGenBlockLayout3" background="Dashboard" visible="true">
+				<l:content>
+					<l:BlockLayoutRow>
+						<l:content>
+							<l:BlockLayoutCell>
+								<l:content>
+									<viz:VizFrame id="IDGenVizFrame2" vizType="column" uiConfig="{applicationSet:'fiori'}" width="100%" height="400px" vizProperties="{title: {text: 'Top 10 Sales Per Provinsi'}}">
+
+										<!-- Dataset akan diatur dari controller -->
+										<viz:dataset>
+											<viz.data:FlattenedDataset data="{salesIndo>/top10sales}">
+												<viz.data:dimensions>
+													<viz.data:DimensionDefinition name="City" value="{salesIndo>city}" />
+												</viz.data:dimensions>
+												<viz.data:measures>
+													<viz.data:MeasureDefinition name="Sales" value="{salesIndo>sales}" />
+												</viz.data:measures>
+											</viz.data:FlattenedDataset>
+										</viz:dataset>
+
+										<!-- Feeds untuk VizFrame -->
+										<viz:feeds>
+											<viz.feeds:FeedItem uid="valueAxis" type="Measure" values="Sales" />
+											<viz.feeds:FeedItem uid="categoryAxis" type="Dimension" values="City" />
+										</viz:feeds>
 									</viz:VizFrame>
 								</l:content>
 							</l:BlockLayoutCell>
@@ -52,7 +93,51 @@
 					</l:BlockLayoutRow>
 				</l:content>
 			</l:BlockLayout>
-			<!-- End of SALES PER COUNTRY -->
+			<!-- End Of Chart 1 -->
+
+			<!-- Start Of Table -->
+			<l:BlockLayout id="_IDGenBlockLayout1" background="Dashboard" visible="true">
+				<l:content>
+					<l:BlockLayoutRow id="_IDGenBlockLayoutRow2" rowColorSet="ColorSet1" scrollable="false">
+						<l:content>
+							<l:BlockLayoutCell id="_IDGenBlockLayoutCell" width="1">
+								<l:content>
+									<Table id="salesTable" items="{salesIndo>/salesData}">
+										<!-- Definisi Kolom -->
+										<columns>
+											<Column id="_IDGenColumn">
+												<Text id="_IDGenText3" text="Id_Code"/>
+											</Column>
+											<Column id="_IDGenColumn1">
+												<Text id="_IDGenText4" text="Kode Provinsi"/>
+											</Column>
+											<Column id="_IDGenColumn2">
+												<Text id="_IDGenText5" text="Provinsi"/>
+											</Column>
+											<Column id="_IDGenColumn3">
+												<Text id="_IDGenText6" text="Harga"/>
+											</Column>
+										</columns>
+
+										<!-- Template Item -->
+										<items>
+											<ColumnListItem id="_IDGenColumnListItem">
+												<cells>
+													<Text id="_IDGenText7" text="{salesIndo>id_code}"/>
+													<Text id="_IDGenText8" text="{salesIndo>tooltip}"/>
+													<Text id="_IDGenText9" text="{salesIndo>city}"/>
+													<Text id="_IDGenText10" text="{salesIndo>waers} {salesIndo>sales}"/>
+												</cells>
+											</ColumnListItem>
+										</items>
+									</Table>
+								</l:content>
+							</l:BlockLayoutCell>
+						</l:content>
+					</l:BlockLayoutRow>
+				</l:content>
+			</l:BlockLayout>
+			<!-- End Of Table -->
 
 		</content>
 	</Page>
