--- a/geomap_indo/webapp/view/NewView.view.xml
+++ b/geomap_indo/webapp/view/NewView.view.xml
@@ -29,30 +29,29 @@
 							<l:BlockLayoutCell id="idCell4" width="1">
 								<l:content>
 
-									<viz:VizFrame id="IDGenVizFrame" vizType="pie" uiConfig="{applicationSet:'fiori'}" width="100%" height="400px" vizProperties="{title: {text: 'Top 10 Sales Per Provinsi'}}">
+									<viz:VizFrame id="IDGenVizFrame" vizType="pie" uiConfig="{applicationSet:'fiori'}" width="100%" height="400px" vizProperties="{title: {text: 'Top 10 Sales Per Provinsi'}}" selectData="onSelectData">
 
 										<!-- Dataset akan diatur dari controller -->
 										<viz:dataset>
 											<!-- <viz.data:FlattenedDataset data="{salesIndo>/top10sales}"> -->
-											<viz.data:FlattenedDataset data="{salesIndo>/salesData}">
+											<viz.data:FlattenedDataset id="_IDGenFlattenedDataset1" data="{salesIndo>/top10sales}">
 												<viz.data:dimensions>
-													<viz.data:DimensionDefinition name="City" value="{salesIndo>city}" />
+													<viz.data:DimensionDefinition id="_IDGenDimensionDefinition" name="City" value="{salesIndo>city}" />
 												</viz.data:dimensions>
 												<viz.data:measures>
-													<viz.data:MeasureDefinition name="Sales" value="{salesIndo>sales}" />
+													<viz.data:MeasureDefinition id="_IDGenMeasureDefinition" name="Sales" value="{salesIndo>sales}" />
 												</viz.data:measures>
 											</viz.data:FlattenedDataset>
 										</viz:dataset>
 
 										<!-- Feeds untuk VizFrame -->
 										<viz:feeds>
-											<viz.feeds:FeedItem uid="size" type="Measure" values="Sales" />
-											<viz.feeds:FeedItem uid="color" type="Dimension" values="City" />
+											<viz.feeds:FeedItem id="_IDGenFeedItem" uid="size" type="Measure" values="Sales" />
+											<viz.feeds:FeedItem id="_IDGenFeedItem1" uid="color" type="Dimension" values="City" />
 										</viz:feeds>
 									</viz:VizFrame>
 
 								</l:content>
-
 							</l:BlockLayoutCell>
 						</l:content>
 					</l:BlockLayoutRow>
@@ -60,33 +59,35 @@
 			</l:BlockLayout>
 			<!-- End of SALES PER COUNTRY -->
 
-			<!-- Start Of Chart 1 -->
+			<!-- Start Of Chart Column -->
 			<l:BlockLayout id="_IDGenBlockLayout3" background="Dashboard" visible="true">
 				<l:content>
-					<l:BlockLayoutRow>
+					<l:BlockLayoutRow id="_IDGenBlockLayoutRow3">
 						<l:content>
-							<l:BlockLayoutCell>
+							<l:BlockLayoutCell id="_IDGenBlockLayoutCell1">
 								<l:content>
-									<viz:VizFrame id="IDGenVizFrame2" vizType="column" uiConfig="{applicationSet:'fiori'}" width="100%" height="400px" vizProperties="{title: {text: 'Top 10 Sales Per Provinsi'}}">
+
+									<viz:VizFrame id="IDGenVizFrame2" vizType="column" uiConfig="{applicationSet:'fiori'}" width="100%" height="400px" vizProperties="{title: {text: 'Chart Sales Per Provinsi'}}" selectData="onSelectData">
 
 										<!-- Dataset akan diatur dari controller -->
 										<viz:dataset>
-											<viz.data:FlattenedDataset data="{salesIndo>/top10sales}">
+											<viz.data:FlattenedDataset id="_IDGenFlattenedDataset2" data="{salesIndo>/salesData}">
 												<viz.data:dimensions>
-													<viz.data:DimensionDefinition name="City" value="{salesIndo>city}" />
+													<viz.data:DimensionDefinition id="_IDGenDimensionDefinition1" name="City" value="{salesIndo>city}" />
 												</viz.data:dimensions>
 												<viz.data:measures>
-													<viz.data:MeasureDefinition name="Sales" value="{salesIndo>sales}" />
+													<viz.data:MeasureDefinition id="_IDGenMeasureDefinition1" name="Sales" value="{salesIndo>sales}" />
 												</viz.data:measures>
 											</viz.data:FlattenedDataset>
 										</viz:dataset>
 
 										<!-- Feeds untuk VizFrame -->
 										<viz:feeds>
-											<viz.feeds:FeedItem uid="valueAxis" type="Measure" values="Sales" />
-											<viz.feeds:FeedItem uid="categoryAxis" type="Dimension" values="City" />
+											<viz.feeds:FeedItem id="_IDGenFeedItem2" uid="valueAxis" type="Measure" values="Sales" />
+											<viz.feeds:FeedItem id="_IDGenFeedItem3" uid="categoryAxis" type="Dimension" values="City" />
 										</viz:feeds>
 									</viz:VizFrame>
+
 								</l:content>
 							</l:BlockLayoutCell>
 						</l:content>
@@ -102,6 +103,7 @@
 						<l:content>
 							<l:BlockLayoutCell id="_IDGenBlockLayoutCell" width="1">
 								<l:content>
+
 									<Table id="salesTable" items="{salesIndo>/salesData}">
 										<!-- Definisi Kolom -->
 										<columns>
@@ -131,6 +133,7 @@
 											</ColumnListItem>
 										</items>
 									</Table>
+
 								</l:content>
 							</l:BlockLayoutCell>
 						</l:content>
@@ -138,6 +141,15 @@
 				</l:content>
 			</l:BlockLayout>
 			<!-- End Of Table -->
+
+			<Panel id="_IDGenPanel1">
+			</Panel>
+			<VBox id="_IDGenVBox4" alignContent="End" alignItems="End" direction="RowReverse">
+				<Link id="_IDGenLink1" text="©️ Source Code" target="_blank" href="https://github.com/alenkarendra/CDS_LEARN/tree/main/geomap_indo"/>
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+					<path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+				</svg>
+			</VBox>
 
 		</content>
 	</Page>
